--- a/web/public/scratchjr/localizations/He.json
+++ b/web/public/scratchjr/localizations/He.json
@@ -344,10 +344,10 @@
     "BLOCK_DESC_TURN_LEFT": "TURN LEFT",
     "BLOCK_DESC_HOP": "HOP",
     "BLOCK_DESC_GO_HOME": "GO HOME",
-    "BLOCK_DESC_SAY": "SAY",
-    "BLOCK_DESC_GROW": "GROW",
-    "BLOCK_DESC_SHRINK": "SHRINK",
-    "BLOCK_DESC_RESET_SIZE": "RESET SIZE",
+    "BLOCK_DESC_SAY": "אמור",
+    "BLOCK_DESC_GROW": "הגדל",
+    "BLOCK_DESC_SHRINK": "הקטן",
+    "BLOCK_DESC_RESET_SIZE": "אפס גודל",
     "BLOCK_DESC_HIDE": "HIDE",
     "BLOCK_DESC_SHOW": "SHOW",
     "BLOCK_DESC_PLAY_SOUND": "PLAY {SOUND_NAME}",
