--- a/web/public/scratchjr/localizations/He.json
+++ b/web/public/scratchjr/localizations/He.json
@@ -26,12 +26,12 @@
     "BLOCKS_ON_TOUCH_DESCRIPTION": "Starts the script when the character is touched by another character.",
     "BLOCKS_ON_MESSAGE": "Start on Message",
     "BLOCKS_ON_MESSAGE_DESCRIPTION": "Starts the script whenever a message of the specified color is sent.",
-    "BLOCKS_SEND_MESSAGE": "Send Message",
+    "BLOCKS_SEND_MESSAGE": "שלח מסר",
     "BLOCKS_SEND_MESSAGE_DESCRIPTION": "Sends a message of the specified color.",
-    "BLOCKS_MOTION_BLOCKS": "Motion Blocks",
-    "BLOCKS_MOVE_RIGHT": "Move Right",
+    "BLOCKS_MOTION_BLOCKS": "לבני תנועה",
+    "BLOCKS_MOVE_RIGHT": "זוז ימינה",
     "BLOCKS_MOVE_RIGHT_DESCRIPTION": "Moves the character a specified number of grid squares to the right.",
-    "BLOCKS_MOVE_LEFT": "Move Left",
+    "BLOCKS_MOVE_LEFT": "זוז שמאלה",
     "BLOCKS_MOVE_LEFT_DESCRIPTION": "Moves the character a specified number of grid squares to the left.",
     "BLOCKS_MOVE_UP": "Move Up",
     "BLOCKS_MOVE_UP_DESCRIPTION": "Moves the character a specified number of grid squares up.",
