--- a/web/public/scratchjr/localizations/He.json
+++ b/web/public/scratchjr/localizations/He.json
@@ -24,23 +24,23 @@
     "BLOCKS_ON_TAP_DESCRIPTION": "Starts the script when you tap on the character.",
     "BLOCKS_ON_TOUCH": "Start on Touch",
     "BLOCKS_ON_TOUCH_DESCRIPTION": "Starts the script when the character is touched by another character.",
-    "BLOCKS_ON_MESSAGE": "Start on Message",
+    "BLOCKS_ON_MESSAGE": "התחל בנכיעה",
     "BLOCKS_ON_MESSAGE_DESCRIPTION": "Starts the script whenever a message of the specified color is sent.",
     "BLOCKS_SEND_MESSAGE": "שלח מסר",
-    "BLOCKS_SEND_MESSAGE_DESCRIPTION": "Sends a message of the specified color.",
+    "BLOCKS_SEND_MESSAGE_DESCRIPTION": "שלח מסר בצבע שנבחר",
     "BLOCKS_MOTION_BLOCKS": "לבני תנועה",
     "BLOCKS_MOVE_RIGHT": "זוז ימינה",
-    "BLOCKS_MOVE_RIGHT_DESCRIPTION": "Moves the character a specified number of grid squares to the right.",
+    "BLOCKS_MOVE_RIGHT_DESCRIPTION": ".הנע את הדמות ימינה מספר צעדים של ריבועי רשת",
     "BLOCKS_MOVE_LEFT": "זוז שמאלה",
-    "BLOCKS_MOVE_LEFT_DESCRIPTION": "Moves the character a specified number of grid squares to the left.",
+    "BLOCKS_MOVE_LEFT_DESCRIPTION": ".הנע את הדמות שמאלה מספר צעדים של ריבועי רשת",
     "BLOCKS_MOVE_UP": "Move Up",
-    "BLOCKS_MOVE_UP_DESCRIPTION": "Moves the character a specified number of grid squares up.",
+    "BLOCKS_MOVE_UP_DESCRIPTION": ".הנע את הדמות למעלה מספר צעדים של ריבועי רשת",
     "BLOCKS_MOVE_DOWN": "Move Down",
-    "BLOCKS_MOVE_DOWN_DESCRIPTION": "Moves the character a specified number of grid squares down.",
+    "BLOCKS_MOVE_DOWN_DESCRIPTION": ".הנע את הדמות למטה מספר צעדים של ריבועי רשת",
     "BLOCKS_TURN_RIGHT": "Turn Right",
-    "BLOCKS_TURN_RIGHT_DESCRIPTION": "Rotates the character clockwise a specified amount. Turn 12 for a full rotation.",
+    "BLOCKS_TURN_RIGHT_DESCRIPTION": "סובב את הדמות בכיוון השעון בערך נבחר, הערך 12  שווה לסיבוב שלם",
     "BLOCKS_TURN_LEFT": "Turn Left",
-    "BLOCKS_TURN_LEFT_DESCRIPTION": "Rotates the character counterclockwise a specified amount. Turn 12 for a full rotation.",
+    "BLOCKS_TURN_LEFT_DESCRIPTION": ".סובב את הדמות בכיוון השעון בערך נבחר, הערך 12  שווה לסיבוב שלם",
     "BLOCKS_HOP": "Hop",
     "BLOCKS_HOP_DESCRIPTION": "Moves the character up a specified number of grid squares and then down again.",
     "BLOCKS_GO_HOME": "Go Home",
@@ -49,31 +49,31 @@
     "BLOCKS_SAY": "Say",
     "BLOCKS_SAY_DESCRIPTION": "Shows a specified message in a speech bubble above the character.",
     "BLOCKS_GROW": "Grow",
-    "BLOCKS_GROW_DESCRIPTION": "Increases the character's size.",
+    "BLOCKS_GROW_DESCRIPTION": ".הגדל את גודל הדמות",
     "BLOCKS_SHRINK": "Shrink",
-    "BLOCKS_SHRINK_DESCRIPTION": "Decreases the character's size.",
-    "BLOCKS_RESET_SIZE": "Reset Size",
+    "BLOCKS_SHRINK_DESCRIPTION": "הקטן את גודל הדמות",
+    "BLOCKS_RESET_SIZE": "אתחל גודל דמות",
     "BLOCKS_RESET_SIZE_DESCRIPTION": "Returns the character to its default size.",
     "BLOCKS_HIDE": "Hide",
     "BLOCKS_HIDE_DESCRIPTION": "Fades out the character until it is invisible.",
     "BLOCKS_SHOW": "Show",
     "BLOCKS_SHOW_DESCRIPTION": "Fades in the character until it is fully visible.",
-    "BLOCKS_SOUND_BLOCKS": "Sound Blocks",
+    "BLOCKS_SOUND_BLOCKS": "לבנת קול",
     "BLOCKS_POP": "Pop",
     "BLOCKS_POP_DESCRIPTION": "Plays a \"Pop\" Sound",
     "BLOCKS_PLAY_RECORDED": "Play Recorded Sound",
     "BLOCKS_PLAY_RECORDED_DESCRIPTION": "Plays a sound recorded by the user.",
-    "BLOCKS_CONTROL_BLOCKS": "Control Blocks",
+    "BLOCKS_CONTROL_BLOCKS": "לבני שליטה",
     "BLOCKS_WAIT": "Wait",
     "BLOCKS_WAIT_DESCRIPTION": "Pauses the script for a specified amount of time (in tenths of seconds).",
     "BLOCKS_STOP": "Stop",
     "BLOCKS_STOP_DESCRIPTION": "Stops all the characters' scripts.",
-    "BLOCKS_SET_SPEED": "Set Speed",
+    "BLOCKS_SET_SPEED": "קבע מהירות",
     "BLOCKS_SET_SPEED_DESCRIPTION": "Changes the rate at which certain blocks are run.",
-    "BLOCKS_REPEAT": "Repeat",
+    "BLOCKS_REPEAT": "חזור",
     "BLOCKS_REPEAT_DESCRIPTION": "Runs the blocks inside a specified number of times.",
-    "BLOCKS_END_BLOCKS": "End Blocks",
-    "BLOCKS_END": "End",
+    "BLOCKS_END_BLOCKS": לבנת סיום",
+    "BLOCKS_END": "סוף",
     "BLOCKS_END_DESCRIPTION": "Indicates the end of the script (but does not affect the script in any way).",
     "BLOCKS_REPEAT_FOREVER": "Repeat Forever",
     "BLOCKS_REPEAT_FOREVER_DESCRIPTION": "Runs the script over and over.",
