--- a/web/public/scratchjr/localizations/He.json
+++ b/web/public/scratchjr/localizations/He.json
@@ -80,23 +80,23 @@
     "BLOCKS_GO_TO_PAGE": "Go to Page",
     "BLOCKS_GO_TO_PAGE_DESCRIPTION": "Changes to the specified page of the project.",
     "INTERFACE_GUIDE_NUMBER": "{N, number}",
-    "INTERFACE_GUIDE_SAVE": "{N, number} | Save",
-    "INTERFACE_GUIDE_STAGE": "{N, number} | Stage",
-    "INTERFACE_GUIDE_PRESENTATION_MODE": "{N, number} | Presentation Mode",
+    "INTERFACE_GUIDE_SAVE": "{N, number} | שמור",
+    "INTERFACE_GUIDE_STAGE": "{N, number} | במה",
+    "INTERFACE_GUIDE_PRESENTATION_MODE": "{N, number} | מצב מצגת",
     "INTERFACE_GUIDE_GRID": "{N, number} | Grid",
-    "INTERFACE_GUIDE_CHANGE_BG": "{N, number} | Change Background",
-    "INTERFACE_GUIDE_ADD_TEXT": "{N, number} | Add Text",
+    "INTERFACE_GUIDE_CHANGE_BG": "{N, number} | שנה רקע",
+    "INTERFACE_GUIDE_ADD_TEXT": "{N, number} | הוסף טקסט",
     "INTERFACE_GUIDE_RESET_CHAR": "{N, number} | Reset Characters",
-    "INTERFACE_GUIDE_GREEN_FLAG": "{N, number} | Green Flag",
-    "INTERFACE_GUIDE_PAGES": "{N, number} | Pages",
-    "INTERFACE_GUIDE_PROJECT_INFO": "{N, number} | Project Information",
+    "INTERFACE_GUIDE_GREEN_FLAG": "{N, number} | דגל ירוק",
+    "INTERFACE_GUIDE_PAGES": "{N, number} | דפים",
+    "INTERFACE_GUIDE_PROJECT_INFO": "{N, number} | מידע על הפרויקט",
     "INTERFACE_GUIDE_UNDO_REDO": "{N, number} | Undo and Redo",
-    "INTERFACE_GUIDE_PROGRAMMING_SCRIPT": "{N, number} | Programming Script",
-    "INTERFACE_GUIDE_PROGRAMMING_AREA": "{N, number} | Programming Area",
+    "INTERFACE_GUIDE_PROGRAMMING_SCRIPT": "{N, number} | תסריט התוכנית",
+    "INTERFACE_GUIDE_PROGRAMMING_AREA": "{N, number} | אזור הקידוד",
     "INTERFACE_GUIDE_BLOCKS_PALETTE": "{N, number} | Blocks Palette",
-    "INTERFACE_GUIDE_BLOCKS_CATEGORIES": "{N, number} | Block Categories",
+    "INTERFACE_GUIDE_BLOCKS_CATEGORIES": "{N, number} | קטגוריות הלבנים",
     "INTERFACE_GUIDE_CHARACTERS": "{N, number} | Characters",
-    "INTERFACE_GUIDE_SAVE_DESCRIPTION": "Save the current project and exit to the Home page.",
+    "INTERFACE_GUIDE_SAVE_DESCRIPTION": ".שמור את הפרויקט הנוכחי וצא לדף הבית",
     "INTERFACE_GUIDE_STAGE_DESCRIPTION": "This is where the action takes place in the project. To delete a character, press and hold it.",
     "INTERFACE_GUIDE_PRESENTATION_MODE_DESCRIPTION": "Expand the stage to the full screen.",
     "INTERFACE_GUIDE_GRID_DESCRIPTION": "Toggle on (and off) the x-y coordinate grid.",
