--- a/web/public/scratchjr/localizations/He.json
+++ b/web/public/scratchjr/localizations/He.json
@@ -54,9 +54,9 @@
     "BLOCKS_SHRINK_DESCRIPTION": "הקטן את גודל הדמות",
     "BLOCKS_RESET_SIZE": "אתחל גודל דמות",
     "BLOCKS_RESET_SIZE_DESCRIPTION": "Returns the character to its default size.",
-    "BLOCKS_HIDE": "Hide",
+    "BLOCKS_HIDE": "הסתר",
     "BLOCKS_HIDE_DESCRIPTION": "Fades out the character until it is invisible.",
-    "BLOCKS_SHOW": "Show",
+    "BLOCKS_SHOW": "הצג",
     "BLOCKS_SHOW_DESCRIPTION": "Fades in the character until it is fully visible.",
     "BLOCKS_SOUND_BLOCKS": "לבנת קול",
     "BLOCKS_POP": "Pop",
