--- a/web/public/scratchjr/localizations/He.json
+++ b/web/public/scratchjr/localizations/He.json
@@ -29,17 +29,17 @@
     "BLOCKS_SEND_MESSAGE": "שלח מסר",
     "BLOCKS_SEND_MESSAGE_DESCRIPTION": "שלח מסר בצבע שנבחר",
     "BLOCKS_MOTION_BLOCKS": "לבני תנועה",
-    "BLOCKS_MOVE_RIGHT": "זוז ימינה",
+    "BLOCKS_MOVE_RIGHT": "תנועה ימינה",
     "BLOCKS_MOVE_RIGHT_DESCRIPTION": ".הנע את הדמות ימינה מספר צעדים של ריבועי רשת",
-    "BLOCKS_MOVE_LEFT": "זוז שמאלה",
+    "BLOCKS_MOVE_LEFT": "תנועה שמאלה",
     "BLOCKS_MOVE_LEFT_DESCRIPTION": ".הנע את הדמות שמאלה מספר צעדים של ריבועי רשת",
-    "BLOCKS_MOVE_UP": "Move Up",
+    "BLOCKS_MOVE_UP": "תנועה למעלה",
     "BLOCKS_MOVE_UP_DESCRIPTION": ".הנע את הדמות למעלה מספר צעדים של ריבועי רשת",
-    "BLOCKS_MOVE_DOWN": "Move Down",
+    "BLOCKS_MOVE_DOWN": "תנועה למטה",
     "BLOCKS_MOVE_DOWN_DESCRIPTION": ".הנע את הדמות למטה מספר צעדים של ריבועי רשת",
-    "BLOCKS_TURN_RIGHT": "Turn Right",
+    "BLOCKS_TURN_RIGHT": "סיבוב ימינה",
     "BLOCKS_TURN_RIGHT_DESCRIPTION": "סובב את הדמות בכיוון השעון בערך נבחר, הערך 12  שווה לסיבוב שלם",
-    "BLOCKS_TURN_LEFT": "Turn Left",
+    "BLOCKS_TURN_LEFT": "סיבוב שמאלה",
     "BLOCKS_TURN_LEFT_DESCRIPTION": ".סובב את הדמות בכיוון השעון בערך נבחר, הערך 12  שווה לסיבוב שלם",
     "BLOCKS_HOP": "Hop",
     "BLOCKS_HOP_DESCRIPTION": "Moves the character up a specified number of grid squares and then down again.",
