--- a/web/public/scratchjr/localizations/He.json
+++ b/web/public/scratchjr/localizations/He.json
@@ -75,7 +75,7 @@
     "BLOCKS_END_BLOCKS": "לבנת סיום",
     "BLOCKS_END": "סוף",
     "BLOCKS_END_DESCRIPTION": "Indicates the end of the script (but does not affect the script in any way).",
-    "BLOCKS_REPEAT_FOREVER": "Repeat Forever",
+    "BLOCKS_REPEAT_FOREVER": "לעולמים",
     "BLOCKS_REPEAT_FOREVER_DESCRIPTION": "Runs the script over and over.",
     "BLOCKS_GO_TO_PAGE": "Go to Page",
     "BLOCKS_GO_TO_PAGE_DESCRIPTION": "Changes to the specified page of the project.",
