--- a/web/public/scratchjr/localizations/He.json
+++ b/web/public/scratchjr/localizations/He.json
@@ -336,27 +336,27 @@
     "BLOCK_DESC_MESSAGE_COLOR_ORANGE": "Orange",
     "BLOCK_DESC_ON_MESSAGE": "START ON {COLOR} MESSAGE",
     "BLOCK_DESC_SEND_MESSAGE": "SEND {COLOR} START MESSAGE",
-    "BLOCK_DESC_MOVE_RIGHT": "MOVE RIGHT",
-    "BLOCK_DESC_MOVE_LEFT": "MOVE LEFT",
-    "BLOCK_DESC_MOVE_UP": "MOVE UP",
-    "BLOCK_DESC_MOVE_DOWN": "MOVE DOWN",
-    "BLOCK_DESC_TURN_RIGHT": "TURN RIGHT",
-    "BLOCK_DESC_TURN_LEFT": "TURN LEFT",
+    "BLOCK_DESC_MOVE_RIGHT": "תנועה ימינה",
+    "BLOCK_DESC_MOVE_LEFT": "תנועה שמאלה",
+    "BLOCK_DESC_MOVE_UP": "תנועה למעלה",
+    "BLOCK_DESC_MOVE_DOWN": "תנועה מטה",
+    "BLOCK_DESC_TURN_RIGHT": "סיבוב ימינה",
+    "BLOCK_DESC_TURN_LEFT": "סיבוב שמאלה",
     "BLOCK_DESC_HOP": "HOP",
-    "BLOCK_DESC_GO_HOME": "GO HOME",
+    "BLOCK_DESC_GO_HOME": "הבייתה",
     "BLOCK_DESC_SAY": "אמור",
     "BLOCK_DESC_GROW": "הגדל",
     "BLOCK_DESC_SHRINK": "הקטן",
     "BLOCK_DESC_RESET_SIZE": "אפס גודל",
-    "BLOCK_DESC_HIDE": "HIDE",
-    "BLOCK_DESC_SHOW": "SHOW",
+    "BLOCK_DESC_HIDE": "הסתר",
+    "BLOCK_DESC_SHOW": "הצג",
     "BLOCK_DESC_PLAY_SOUND": "PLAY {SOUND_NAME}",
-    "BLOCK_DESC_PLAY_SOUND_POP": "pop",
+    "BLOCK_DESC_PLAY_SOUND_POP": "פופ",
     "BLOCK_DESC_PLAY_RECORDED_SOUND": "PLAY RECORDED SOUND",
-    "BLOCK_DESC_WAIT": "WAIT",
+    "BLOCK_DESC_WAIT": "המתן",
     "BLOCK_DESC_STOP": "STOP {CHARACTER_NAME}",
     "BLOCK_DESC_SET_SPEED": "SET SPEED",
-    "BLOCK_DESC_REPEAT": "REPEAT",
+    "BLOCK_DESC_REPEAT": "חזור",
     "BLOCK_DESC_END": "END",
     "BLOCK_DESC_REPEAT_FOREVER": "REPEAT FOREVER",
     "BLOCK_DESC_GO_TO_PAGE": "GO TO PAGE {PAGE}",
@@ -367,16 +367,16 @@
     "FOR_PARENTS": "For Parents",
     "PARENTAL_GATE_EXPLANATION": "Why are we asking this? An adult must approve online sharing.",
     "GRID_NUMBER": "{N, number}",
-    "NEW_PROJECT_PREFIX": "Project",
+    "NEW_PROJECT_PREFIX": "פרויקט",
     "LIBRARY_CHARACTER": "Character",
-    "LIBRARY_BACKGROUND": "Background",
+    "LIBRARY_BACKGROUND": "רקע",
     "SAY_BLOCK_DEFAULT_ARGUMENT": "hi",
     "ALERT_BACK": "Back",
     "ALERT_SAVING": "Saving...",
     "SELECT_LANGUAGE": "Select language",
     "USAGE_QUESTION": "Where are you using ScratchJr?",
     "USAGE_SCHOOL": "School",
-    "USAGE_HOME": "Home",
+    "USAGE_HOME": "בית",
     "USAGE_OTHER": "Other",
     "USAGE_NONE": "Don't ask again"
 }
