--- a/web/public/scratchjr/localizations/He.json
+++ b/web/public/scratchjr/localizations/He.json
@@ -20,12 +20,12 @@
     "BLOCKS_TRIGGERING_BLOCKS": "Triggering Blocks",
     "BLOCKS_GREEN_FLAG": "התחל עם דגל ירוק",
     "BLOCKS_GREEN_FLAG_DESCRIPTION": "הפעלת תסריט כאשר מקישים על הדגל הירוק",
-    "BLOCKS_ON_TAP": "Start on Tap",
+    "BLOCKS_ON_TAP": "התחל בנגיעה",
     "BLOCKS_ON_TAP_DESCRIPTION": "Starts the script when you tap on the character.",
     "BLOCKS_ON_TOUCH": "Start on Touch",
-    "BLOCKS_ON_TOUCH_DESCRIPTION": "Starts the script when the character is touched by another character.",
+    "BLOCKS_ON_TOUCH_DESCRIPTION": ".הפעלת תסריט כאשר דמות אחת נוגעת בדמות אחרת",
     "BLOCKS_ON_MESSAGE": "התחל בנכיעה",
-    "BLOCKS_ON_MESSAGE_DESCRIPTION": "Starts the script whenever a message of the specified color is sent.",
+    "BLOCKS_ON_MESSAGE_DESCRIPTION": "הפעלת תסריט בכל פעם שנשלחת מסר בצבע שצוין",
     "BLOCKS_SEND_MESSAGE": "שלח מסר",
     "BLOCKS_SEND_MESSAGE_DESCRIPTION": "שלח מסר בצבע שנבחר",
     "BLOCKS_MOTION_BLOCKS": "לבני תנועה",
@@ -42,32 +42,32 @@
     "BLOCKS_TURN_LEFT": "סיבוב שמאלה",
     "BLOCKS_TURN_LEFT_DESCRIPTION": ".סובב את הדמות בכיוון השעון בערך נבחר, הערך 12  שווה לסיבוב שלם",
     "BLOCKS_HOP": "Hop",
-    "BLOCKS_HOP_DESCRIPTION": "Moves the character up a specified number of grid squares and then down again.",
-    "BLOCKS_GO_HOME": "Go Home",
+    "BLOCKS_HOP_DESCRIPTION": ".תנועה של דמות למעלה מספר צעדים נבחר ואז למטה או מספר של צעדים (קפיצה)",
+    "BLOCKS_GO_HOME": "לך הבייתה",
     "BLOCKS_GO_HOME_DESCRIPTION": "Resets the character's location to its starting position. (To set a new starting position, drag the character to the location).",
-    "BLOCKS_LOOKS_BLOCKS": "Looks Blocks",
-    "BLOCKS_SAY": "Say",
+    "BLOCKS_LOOKS_BLOCKS": "לבני מראה",
+    "BLOCKS_SAY": "אמור",
     "BLOCKS_SAY_DESCRIPTION": "Shows a specified message in a speech bubble above the character.",
-    "BLOCKS_GROW": "Grow",
+    "BLOCKS_GROW": "הגדל",
     "BLOCKS_GROW_DESCRIPTION": ".הגדל את גודל הדמות",
     "BLOCKS_SHRINK": "Shrink",
     "BLOCKS_SHRINK_DESCRIPTION": "הקטן את גודל הדמות",
     "BLOCKS_RESET_SIZE": "אתחל גודל דמות",
     "BLOCKS_RESET_SIZE_DESCRIPTION": "Returns the character to its default size.",
     "BLOCKS_HIDE": "הסתר",
-    "BLOCKS_HIDE_DESCRIPTION": "Fades out the character until it is invisible.",
+    "BLOCKS_HIDE_DESCRIPTION": "עמעם את הדמות עד שהיא בלתי נראית",
     "BLOCKS_SHOW": "הצג",
-    "BLOCKS_SHOW_DESCRIPTION": "Fades in the character until it is fully visible.",
+    "BLOCKS_SHOW_DESCRIPTION": ".הפעל את הדצות עד שהיא נראית לחלוטין",
     "BLOCKS_SOUND_BLOCKS": "לבנת קול",
     "BLOCKS_POP": "Pop",
     "BLOCKS_POP_DESCRIPTION": "Plays a \"Pop\" Sound",
-    "BLOCKS_PLAY_RECORDED": "Play Recorded Sound",
-    "BLOCKS_PLAY_RECORDED_DESCRIPTION": "Plays a sound recorded by the user.",
+    "BLOCKS_PLAY_RECORDED": "השמעת צליל מוקלט",
+    "BLOCKS_PLAY_RECORDED_DESCRIPTION": "השמעת צליל שהוקלט על-ידי המשתמש.",
     "BLOCKS_CONTROL_BLOCKS": "לבני שליטה",
-    "BLOCKS_WAIT": "Wait",
+    "BLOCKS_WAIT": "המתן",
     "BLOCKS_WAIT_DESCRIPTION": "Pauses the script for a specified amount of time (in tenths of seconds).",
     "BLOCKS_STOP": "Stop",
-    "BLOCKS_STOP_DESCRIPTION": "Stops all the characters' scripts.",
+    "BLOCKS_STOP_DESCRIPTION": ".עצירת את כל התסריטים של הדמויות",
     "BLOCKS_SET_SPEED": "קבע מהירות",
     "BLOCKS_SET_SPEED_DESCRIPTION": "Changes the rate at which certain blocks are run.",
     "BLOCKS_REPEAT": "חזור",
