--- a/web/public/scratchjr/localizations/He.json
+++ b/web/public/scratchjr/localizations/He.json
@@ -47,13 +47,13 @@
     "BLOCKS_GO_HOME_DESCRIPTION": "Resets the character's location to its starting position. (To set a new starting position, drag the character to the location).",
     "BLOCKS_LOOKS_BLOCKS": "לבני מראה",
     "BLOCKS_SAY": "אמור",
-    "BLOCKS_SAY_DESCRIPTION": "Shows a specified message in a speech bubble above the character.",
+    "BLOCKS_SAY_DESCRIPTION": ".הצגת הודעה שצוינה בבועת דיבור מעל הדמות",
     "BLOCKS_GROW": "הגדל",
     "BLOCKS_GROW_DESCRIPTION": ".הגדל את גודל הדמות",
     "BLOCKS_SHRINK": "Shrink",
     "BLOCKS_SHRINK_DESCRIPTION": "הקטן את גודל הדמות",
     "BLOCKS_RESET_SIZE": "אתחל גודל דמות",
-    "BLOCKS_RESET_SIZE_DESCRIPTION": "Returns the character to its default size.",
+    "BLOCKS_RESET_SIZE_DESCRIPTION": "החזרת הדמות לגודל ברירת המחדל שלה.",
     "BLOCKS_HIDE": "הסתר",
     "BLOCKS_HIDE_DESCRIPTION": "עמעם את הדמות עד שהיא בלתי נראית",
     "BLOCKS_SHOW": "הצג",
@@ -65,18 +65,18 @@
     "BLOCKS_PLAY_RECORDED_DESCRIPTION": "השמעת צליל שהוקלט על-ידי המשתמש.",
     "BLOCKS_CONTROL_BLOCKS": "לבני שליטה",
     "BLOCKS_WAIT": "המתן",
-    "BLOCKS_WAIT_DESCRIPTION": "Pauses the script for a specified amount of time (in tenths of seconds).",
-    "BLOCKS_STOP": "Stop",
+    "BLOCKS_WAIT_DESCRIPTION": "השהיית התסריט למשך פרק זמן מוגדר בעשיריות השניות.",
+    "BLOCKS_STOP": "עצור",
     "BLOCKS_STOP_DESCRIPTION": ".עצירת את כל התסריטים של הדמויות",
     "BLOCKS_SET_SPEED": "קבע מהירות",
-    "BLOCKS_SET_SPEED_DESCRIPTION": "Changes the rate at which certain blocks are run.",
+    "BLOCKS_SET_SPEED_DESCRIPTION": "משנה את קצב הפעלת לבנים מסוימים.",
     "BLOCKS_REPEAT": "חזור",
-    "BLOCKS_REPEAT_DESCRIPTION": "Runs the blocks inside a specified number of times.",
+    "BLOCKS_REPEAT_DESCRIPTION": "הפעלת הלבנים בתוך מספר מוגדר של פעמים.",
     "BLOCKS_END_BLOCKS": "לבנת סיום",
     "BLOCKS_END": "סוף",
     "BLOCKS_END_DESCRIPTION": "Indicates the end of the script (but does not affect the script in any way).",
     "BLOCKS_REPEAT_FOREVER": "לעולמים",
-    "BLOCKS_REPEAT_FOREVER_DESCRIPTION": "Runs the script over and over.",
+    "BLOCKS_REPEAT_FOREVER_DESCRIPTION": "הרצת התסריט לעולמים.",
     "BLOCKS_GO_TO_PAGE": "Go to Page",
     "BLOCKS_GO_TO_PAGE_DESCRIPTION": "Changes to the specified page of the project.",
     "INTERFACE_GUIDE_NUMBER": "{N, number}",
