--- a/web/public/scratchjr/localizations/He.json
+++ b/web/public/scratchjr/localizations/He.json
@@ -93,9 +93,9 @@
     "INTERFACE_GUIDE_UNDO_REDO": "{N, number} | Undo and Redo",
     "INTERFACE_GUIDE_PROGRAMMING_SCRIPT": "{N, number} | תסריט התוכנית",
     "INTERFACE_GUIDE_PROGRAMMING_AREA": "{N, number} | אזור הקידוד",
-    "INTERFACE_GUIDE_BLOCKS_PALETTE": "{N, number} | Blocks Palette",
+    "INTERFACE_GUIDE_BLOCKS_PALETTE": "{N, number} | לוח לבנים",
     "INTERFACE_GUIDE_BLOCKS_CATEGORIES": "{N, number} | קטגוריות הלבנים",
-    "INTERFACE_GUIDE_CHARACTERS": "{N, number} | Characters",
+    "INTERFACE_GUIDE_CHARACTERS": "{N, number} | דמויות",
     "INTERFACE_GUIDE_SAVE_DESCRIPTION": ".שמור את הפרויקט הנוכחי וצא לדף הבית",
     "INTERFACE_GUIDE_STAGE_DESCRIPTION": "This is where the action takes place in the project. To delete a character, press and hold it.",
     "INTERFACE_GUIDE_PRESENTATION_MODE_DESCRIPTION": "Expand the stage to the full screen.",
@@ -315,8 +315,8 @@
     "BACKGROUND_EmptyRoom.svg": "Empty Room",
     "BACKGROUND_Summer.svg": "Summer",
     "BACKGROUND_Fall.svg": "Fall",
-    "BACKGROUND_Winter.svg": "Winter",
-    "BACKGROUND_Spring.svg": "Spring",
+    "BACKGROUND_Winter.svg": "חורף",
+    "BACKGROUND_Spring.svg": "קיץ",
     "BACKGROUND_Creek.svg": "River",
     "BACKGROUND_Lake.svg": "Lake",
     "BACKGROUND_Woods.svg": "Woods",
@@ -333,7 +333,7 @@
     "BLOCK_DESC_GREEN_FLAG": "START ON GREEN FLAG",
     "BLOCK_DESC_ON_TAP": "START ON TAP {CHARACTER_NAME}",
     "BLOCK_DESC_ON_BUMP": "START ON BUMP {CHARACTER_NAME}",
-    "BLOCK_DESC_MESSAGE_COLOR_ORANGE": "Orange",
+    "BLOCK_DESC_MESSAGE_COLOR_ORANGE": "כתום",
     "BLOCK_DESC_ON_MESSAGE": "START ON {COLOR} MESSAGE",
     "BLOCK_DESC_SEND_MESSAGE": "SEND {COLOR} START MESSAGE",
     "BLOCK_DESC_MOVE_RIGHT": "תנועה ימינה",
@@ -350,33 +350,33 @@
     "BLOCK_DESC_RESET_SIZE": "אפס גודל",
     "BLOCK_DESC_HIDE": "הסתר",
     "BLOCK_DESC_SHOW": "הצג",
-    "BLOCK_DESC_PLAY_SOUND": "PLAY {SOUND_NAME}",
+    "BLOCK_DESC_PLAY_SOUND": "נגן {SOUND_NAME}",
     "BLOCK_DESC_PLAY_SOUND_POP": "פופ",
-    "BLOCK_DESC_PLAY_RECORDED_SOUND": "PLAY RECORDED SOUND",
+    "BLOCK_DESC_PLAY_RECORDED_SOUND": "השמעת צליל מוקלט",
     "BLOCK_DESC_WAIT": "המתן",
-    "BLOCK_DESC_STOP": "STOP {CHARACTER_NAME}",
+    "BLOCK_DESC_STOP": "עצור {CHARACTER_NAME}",
     "BLOCK_DESC_SET_SPEED": "SET SPEED",
     "BLOCK_DESC_REPEAT": "חזור",
     "BLOCK_DESC_END": "END",
-    "BLOCK_DESC_REPEAT_FOREVER": "REPEAT FOREVER",
-    "BLOCK_DESC_GO_TO_PAGE": "GO TO PAGE {PAGE}",
-    "SHARING_BY_EMAIL": "Share by Email",
+    "BLOCK_DESC_REPEAT_FOREVER": "לעולמים",
+    "BLOCK_DESC_GO_TO_PAGE": "לך לדף {PAGE}",
+    "SHARING_BY_EMAIL": "שתף באמצעות דוא"ל",
     "SHARING_BY_AIRDROP": "Share by Airdrop",
-    "SHARING_EMAIL_SUBJECT": "ScratchJr Project: {PROJECT_NAME}",
+    "SHARING_EMAIL_SUBJECT": "פרויקט סקראץ גוניור: {PROJECT_NAME}",
     "SHARING_EMAIL_TEXT": "Click the icon to try my ScratchJr project on your iPad or Android tablet!<br><br>If you don't have the ScratchJr app, you can <a href='http://www.scratchjr.org'>download it</a> from the Apple App store or the Google Play Store.<br><br>With ScratchJr, children can create their own interactive stories and games. To learn more, see <a href='http://www.scratchjr.org'>scratchjr.org</a>.",
-    "FOR_PARENTS": "For Parents",
+    "FOR_PARENTS": "לשותפים",
     "PARENTAL_GATE_EXPLANATION": "Why are we asking this? An adult must approve online sharing.",
     "GRID_NUMBER": "{N, number}",
     "NEW_PROJECT_PREFIX": "פרויקט",
     "LIBRARY_CHARACTER": "Character",
     "LIBRARY_BACKGROUND": "רקע",
     "SAY_BLOCK_DEFAULT_ARGUMENT": "hi",
-    "ALERT_BACK": "Back",
-    "ALERT_SAVING": "Saving...",
-    "SELECT_LANGUAGE": "Select language",
+    "ALERT_BACK": "חצור",
+    "ALERT_SAVING": "שמירה...",
+    "SELECT_LANGUAGE": "בחר שפה",
     "USAGE_QUESTION": "Where are you using ScratchJr?",
-    "USAGE_SCHOOL": "School",
+    "USAGE_SCHOOL": "בית ספר",
     "USAGE_HOME": "בית",
     "USAGE_OTHER": "Other",
-    "USAGE_NONE": "Don't ask again"
+    "USAGE_NONE": "אל תשאלו שוב"
 }
