--- a/web/public/scratchjr/localizations/He.json
+++ b/web/public/scratchjr/localizations/He.json
@@ -360,7 +360,7 @@
     "BLOCK_DESC_END": "END",
     "BLOCK_DESC_REPEAT_FOREVER": "לעולמים",
     "BLOCK_DESC_GO_TO_PAGE": "לך לדף {PAGE}",
-    "SHARING_BY_EMAIL": "שתף באמצעות דוא"ל",
+    "SHARING_BY_EMAIL": "שתף באמצעות דואל",
     "SHARING_BY_AIRDROP": "Share by Airdrop",
     "SHARING_EMAIL_SUBJECT": "פרויקט סקראץ גוניור: {PROJECT_NAME}",
     "SHARING_EMAIL_TEXT": "Click the icon to try my ScratchJr project on your iPad or Android tablet!<br><br>If you don't have the ScratchJr app, you can <a href='http://www.scratchjr.org'>download it</a> from the Apple App store or the Google Play Store.<br><br>With ScratchJr, children can create their own interactive stories and games. To learn more, see <a href='http://www.scratchjr.org'>scratchjr.org</a>.",
