--- a/web/public/scratchjr/localizations/He.json
+++ b/web/public/scratchjr/localizations/He.json
@@ -22,9 +22,9 @@
     "BLOCKS_GREEN_FLAG_DESCRIPTION": "הפעלת תסריט כאשר מקישים על הדגל הירוק",
     "BLOCKS_ON_TAP": "התחל בנגיעה",
     "BLOCKS_ON_TAP_DESCRIPTION": "Starts the script when you tap on the character.",
-    "BLOCKS_ON_TOUCH": "Start on Touch",
+    "BLOCKS_ON_TOUCH": "התחל בנגיעה",
     "BLOCKS_ON_TOUCH_DESCRIPTION": ".הפעלת תסריט כאשר דמות אחת נוגעת בדמות אחרת",
-    "BLOCKS_ON_MESSAGE": "התחל בנכיעה",
+    "BLOCKS_ON_MESSAGE": "התחל בנגיעה",
     "BLOCKS_ON_MESSAGE_DESCRIPTION": "הפעלת תסריט בכל פעם שנשלחת מסר בצבע שצוין",
     "BLOCKS_SEND_MESSAGE": "שלח מסר",
     "BLOCKS_SEND_MESSAGE_DESCRIPTION": "שלח מסר בצבע שנבחר",
@@ -334,8 +334,8 @@
     "BLOCK_DESC_ON_TAP": "START ON TAP {CHARACTER_NAME}",
     "BLOCK_DESC_ON_BUMP": "START ON BUMP {CHARACTER_NAME}",
     "BLOCK_DESC_MESSAGE_COLOR_ORANGE": "כתום",
-    "BLOCK_DESC_ON_MESSAGE": "START ON {COLOR} MESSAGE",
-    "BLOCK_DESC_SEND_MESSAGE": "SEND {COLOR} START MESSAGE",
+    "BLOCK_DESC_ON_MESSAGE": " {COLOR} כאשר מתקבל מסר",
+    "BLOCK_DESC_SEND_MESSAGE": " {COLOR} שלח מסר בצבע",
     "BLOCK_DESC_MOVE_RIGHT": "תנועה ימינה",
     "BLOCK_DESC_MOVE_LEFT": "תנועה שמאלה",
     "BLOCK_DESC_MOVE_UP": "תנועה למעלה",
