--- a/web/public/scratchjr/localizations/He.json
+++ b/web/public/scratchjr/localizations/He.json
@@ -3,9 +3,9 @@
     "SAVE_CLOUD": "שמירה לענן",
     "MY_PROJECTS": "הפרויקט שלי",
     "QUICK_INTRO": "כניסה מהירה לסקרץ גוניור",
-    "SAMPLE_PROJECTS": "פרויקטים לדוכמא",
+    "SAMPLE_PROJECTS": "פרויקטים לדוגמא",
     "ABOUT_SCRATCHJR": "אודות סקראץ גוניור",
-    "INTERFACE_GUIDE": "Interface Guide",
+    "INTERFACE_GUIDE": "מדריך לממשק",
     "PAINT_EDITOR_GUIDE": "מדריך לעורך צבע",
     "BLOCKS_GUIDE": "מדריך ללבנים",
     "ABOUT_WHAT_IS": "מה זה ScratchJr?",
