--- a/web/public/scratchjr/localizations/He.json
+++ b/web/public/scratchjr/localizations/He.json
@@ -342,7 +342,7 @@
     "BLOCK_DESC_MOVE_DOWN": "תנועה מטה",
     "BLOCK_DESC_TURN_RIGHT": "סיבוב ימינה",
     "BLOCK_DESC_TURN_LEFT": "סיבוב שמאלה",
-    "BLOCK_DESC_HOP": "HOP",
+    "BLOCK_DESC_HOP": "קפיצה",
     "BLOCK_DESC_GO_HOME": "הבייתה",
     "BLOCK_DESC_SAY": "אמור",
     "BLOCK_DESC_GROW": "הגדל",
@@ -368,15 +368,15 @@
     "PARENTAL_GATE_EXPLANATION": "Why are we asking this? An adult must approve online sharing.",
     "GRID_NUMBER": "{N, number}",
     "NEW_PROJECT_PREFIX": "פרויקט",
-    "LIBRARY_CHARACTER": "Character",
+    "LIBRARY_CHARACTER": "דמויות",
     "LIBRARY_BACKGROUND": "רקע",
     "SAY_BLOCK_DEFAULT_ARGUMENT": "hi",
-    "ALERT_BACK": "חצור",
+    "ALERT_BACK": "חזור",
     "ALERT_SAVING": "שמירה...",
     "SELECT_LANGUAGE": "בחר שפה",
     "USAGE_QUESTION": "Where are you using ScratchJr?",
     "USAGE_SCHOOL": "בית ספר",
     "USAGE_HOME": "בית",
-    "USAGE_OTHER": "Other",
+    "USAGE_OTHER": "אחר",
     "USAGE_NONE": "אל תשאלו שוב"
 }
