--- a/web/public/scratchjr/localizations/He.json
+++ b/web/public/scratchjr/localizations/He.json
@@ -354,7 +354,7 @@
     "BLOCK_DESC_PLAY_SOUND_POP": "פופ",
     "BLOCK_DESC_PLAY_RECORDED_SOUND": "השמעת צליל מוקלט",
     "BLOCK_DESC_WAIT": "המתן",
-    "BLOCK_DESC_STOP": " {CHARACTER_NAME} עצור",
+    "BLOCK_DESC_STOP": "  עצור {CHARACTER_NAME}",
     "BLOCK_DESC_SET_SPEED": "קבע מהירות",
     "BLOCK_DESC_REPEAT": "חזור",
     "BLOCK_DESC_END": "סוֹף",
