--- a/web/public/scratchjr/localizations/He.json
+++ b/web/public/scratchjr/localizations/He.json
@@ -331,8 +331,8 @@
     "BACKGROUND_Space.svg": "Space",
     "BACKGROUND_MoonBkg.svg": "Moon",
     "BLOCK_DESC_GREEN_FLAG": "התחל בדגל ירוק",
-    "BLOCK_DESC_ON_TAP": "הצחל בנגיעה בדמות {CHARACTER_NAME}",
-    "BLOCK_DESC_ON_BUMP": "START ON BUMP {CHARACTER_NAME}",
+    "BLOCK_DESC_ON_TAP": "התחל בנגיעה בדמות {CHARACTER_NAME}",
+    "BLOCK_DESC_ON_BUMP": "התחל בנגיעה בדמות {CHARACTER_NAME}",
     "BLOCK_DESC_MESSAGE_COLOR_ORANGE": "כתום",
     "BLOCK_DESC_ON_MESSAGE": " כאשר מתקבל מסר  {COLOR}",
     "BLOCK_DESC_SEND_MESSAGE": " {COLOR} שלח מסר בצבע",
