--- a/web/public/scratchjr/localizations/He.json
+++ b/web/public/scratchjr/localizations/He.json
@@ -99,10 +99,10 @@
     "INTERFACE_GUIDE_SAVE_DESCRIPTION": ".שמור את הפרויקט הנוכחי וצא לדף הבית",
     "INTERFACE_GUIDE_STAGE_DESCRIPTION": "כאן מתבצעות הפעולות בפרויקט. כדי למחוק דמות, לחץ והחזק אותה",
     "INTERFACE_GUIDE_PRESENTATION_MODE_DESCRIPTION": "הרחב את הבמה למסך מלא.",
-    "INTERFACE_GUIDE_GRID_DESCRIPTION": "Toggle on (and off) the x-y coordinate grid.",
-    "INTERFACE_GUIDE_CHANGE_BG_DESCRIPTION": "Select or create a background image for the stage.",
-    "INTERFACE_GUIDE_ADD_TEXT_DESCRIPTION": "Write titles and labels on the stage.",
-    "INTERFACE_GUIDE_RESET_CHAR_DESCRIPTION": "Reset all characters to their starting positions on the stage. (Drag characters to set up new starting positions.)",
+    "INTERFACE_GUIDE_GRID_DESCRIPTION": "הפעלה (וכיבוי) של רשת הקואורדינטות של x-y",
+    "INTERFACE_GUIDE_CHANGE_BG_DESCRIPTION": "בחרו או צרו בעצמכם תמונת רקע לבמה.",
+    "INTERFACE_GUIDE_ADD_TEXT_DESCRIPTION": "כתבו כותרות ותוויות על הבמה. (ניתן לשנות גודל וצבע)",
+    "INTERFACE_GUIDE_RESET_CHAR_DESCRIPTION": "אפסו את כל הדמויות לעמדות ההתחלה שלהם על הבמה. (גררו דמויות כדי להגדיר עמדות התחלה חדשות) ",
     "INTERFACE_GUIDE_GREEN_FLAG_DESCRIPTION": "Start all programming scripts that begin with a \"Start on Green Flag\" block by tapping here.",
     "INTERFACE_GUIDE_PAGES_DESCRIPTION": "Select among the pages in your project \u2014 or tap the plus sign to add a new page. Each page has its own set of characters and a background. To delete a page, press and hold it. To reorder pages, drag them to new positions.",
     "INTERFACE_GUIDE_PROJECT_INFO_DESCRIPTION": "Change the title of the project, see when the project was created, and share the project (if supported by your device).",
