--- a/web/public/scratchjr/localizations/He.json
+++ b/web/public/scratchjr/localizations/He.json
@@ -104,10 +104,10 @@
     "INTERFACE_GUIDE_ADD_TEXT_DESCRIPTION": "כתבו כותרות ותוויות על הבמה. (ניתן לשנות גודל וצבע)",
     "INTERFACE_GUIDE_RESET_CHAR_DESCRIPTION": "אפסו את כל הדמויות לעמדות ההתחלה שלהם על הבמה. (גררו דמויות כדי להגדיר עמדות התחלה חדשות) ",
     "INTERFACE_GUIDE_GREEN_FLAG_DESCRIPTION": "Start all programming scripts that begin with a \"Start on Green Flag\" block by tapping here.",
-    "INTERFACE_GUIDE_PAGES_DESCRIPTION": "Select among the pages in your project \u2014 or tap the plus sign to add a new page. Each page has its own set of characters and a background. To delete a page, press and hold it. To reorder pages, drag them to new positions.",
+    "INTERFACE_GUIDE_PAGES_DESCRIPTION": ".בחרו בין הדפים בפרויקט שלכם - או הקישו על סימן הפלוס כדי להוסיף דף חדש. בכל עמוד סדרת דמויות משלו ורקע. למחיקת עמוד, לחץ עליו וכשיתנדנד סגרו באיקס. כדי לשנות את סדר הדפים, גררו אותם למיקומים חדשים",
     "INTERFACE_GUIDE_PROJECT_INFO_DESCRIPTION": "Change the title of the project, see when the project was created, and share the project (if supported by your device).",
-    "INTERFACE_GUIDE_UNDO_REDO_DESCRIPTION": "If you make a mistake, tap Undo to go back in time, reversing the last action. Tap Redo to reverse the last Undo.",
-    "INTERFACE_GUIDE_PROGRAMMING_SCRIPT_DESCRIPTION": "Snap blocks together to make a programming script, telling the character what to do. Tap anywhere on a script to make it run. To delete a block or script, drag it outside the programming area. To copy a block or script from one character to another, drag it onto the character's thumbnail.",
+    "INTERFACE_GUIDE_UNDO_REDO_DESCRIPTION": ".אם טעיתם, הקישו על בטל כדי לחזור אחורה בזמן, ולבטל את הפעולה האחרונה. הקישו על בצע שוב כדי להחזיר את הביטול האחרון",
+    "INTERFACE_GUIDE_PROGRAMMING_SCRIPT_DESCRIPTION": ".הצמידו בלוקים יחד כדי ליצור סקריפט תכנות, ולומר לדמות מה לעשות. הקישו בכל מקום בתסריט כדי להפעיל אותו. כדי למחוק לבנה או חלקים מהסקריפט, גרור אותם אל מחוץ ל-אזור התכנות. כדי להעתיק לבנה או סקריפט מדמות אחת לאחרת, גרור אותה אל ה-תמונה הממוזערת של הדמות (משמאל)",
     "INTERFACE_GUIDE_PROGRAMMING_AREA_DESCRIPTION": "This is where you connect programming blocks to create scripts, telling the character what to do.",
     "INTERFACE_GUIDE_BLOCKS_PALETTE_DESCRIPTION": "This is the menu of programming blocks. Drag a block into the programming area, then tap on it to see what it does.",
     "INTERFACE_GUIDE_BLOCKS_CATEGORIES_DESCRIPTION": "This is where you can select a category of programming blocks: Triggering Blocks (Yellow), Motion (Blue), Looks (Purple), Sounds (Green), Control (Orange), End Blocks (Red).",
