--- a/web/public/scratchjr/localizations/He.json
+++ b/web/public/scratchjr/localizations/He.json
@@ -103,15 +103,17 @@
     "INTERFACE_GUIDE_CHANGE_BG_DESCRIPTION": "בחרו או צרו בעצמכם תמונת רקע לבמה.",
     "INTERFACE_GUIDE_ADD_TEXT_DESCRIPTION": "כתבו כותרות ותוויות על הבמה. (ניתן לשנות גודל וצבע)",
     "INTERFACE_GUIDE_RESET_CHAR_DESCRIPTION": "אפסו את כל הדמויות לעמדות ההתחלה שלהם על הבמה. (גררו דמויות כדי להגדיר עמדות התחלה חדשות) ",
-    "INTERFACE_GUIDE_GREEN_FLAG_DESCRIPTION": "Start all programming scripts that begin with a \"Start on Green Flag\" block by tapping here.",
+    "INTERFACE_GUIDE_GREEN_FLAG_DESCRIPTION": ".להפעלת כל תסריטי התכנות המתחילים בהוראה "התחל בדגל ירוק" הקישו כאן",
     "INTERFACE_GUIDE_PAGES_DESCRIPTION": ".בחרו בין הדפים בפרויקט שלכם - או הקישו על סימן הפלוס כדי להוסיף דף חדש. בכל עמוד סדרת דמויות משלו ורקע. למחיקת עמוד, לחץ עליו וכשיתנדנד סגרו באיקס. כדי לשנות את סדר הדפים, גררו אותם למיקומים חדשים",
-    "INTERFACE_GUIDE_PROJECT_INFO_DESCRIPTION": "Change the title of the project, see when the project was created, and share the project (if supported by your device).",
+    "INTERFACE_GUIDE_PROJECT_INFO_DESCRIPTION": ".ניתן לשנות את כותרת/שם הפרויקט ולראות מתי הוא נוצר",
     "INTERFACE_GUIDE_UNDO_REDO_DESCRIPTION": ".אם טעיתם, הקישו על בטל כדי לחזור אחורה בזמן, ולבטל את הפעולה האחרונה. הקישו על בצע שוב כדי להחזיר את הביטול האחרון",
     "INTERFACE_GUIDE_PROGRAMMING_SCRIPT_DESCRIPTION": ".הצמידו בלוקים יחד כדי ליצור סקריפט תכנות, ולומר לדמות מה לעשות. הקישו בכל מקום בתסריט כדי להפעיל אותו. כדי למחוק לבנה או חלקים מהסקריפט, גרור אותם אל מחוץ ל-אזור התכנות. כדי להעתיק לבנה או סקריפט מדמות אחת לאחרת, גרור אותה אל ה-תמונה הממוזערת של הדמות (משמאל)",
     "INTERFACE_GUIDE_PROGRAMMING_AREA_DESCRIPTION": "This is where you connect programming blocks to create scripts, telling the character what to do.",
-    "INTERFACE_GUIDE_BLOCKS_PALETTE_DESCRIPTION": "This is the menu of programming blocks. Drag a block into the programming area, then tap on it to see what it does.",
-    "INTERFACE_GUIDE_BLOCKS_CATEGORIES_DESCRIPTION": "This is where you can select a category of programming blocks: Triggering Blocks (Yellow), Motion (Blue), Looks (Purple), Sounds (Green), Control (Orange), End Blocks (Red).",
-    "INTERFACE_GUIDE_CHARACTERS_DESCRIPTION": "Select among the characters in your project \u2014 or tap the plus sign to add a new one. Once a character is selected, you can edit its scripts, tap its name to rename it, or tap the paintbrush to edit its image. To delete a character, press and hold it. To copy a character to another page, drag it to the page thumbnail.",
+    "INTERFACE_GUIDE_BLOCKS_PALETTE_DESCRIPTION": ".זהו התפריט של הלבנים לתכנות. גררו לבנה לאזור התכנות ואז הקישו עליה, לראות מה היא עושה",
+    "INTERFACE_GUIDE_BLOCKS_CATEGORIES_DESCRIPTION": ".כאן תוכלו לבחור קטגוריה של בלוקים לתכנות: הפעלת בלוקים (צהוב), תנועה (כחול), מראה (סגול), צלילים (ירוק), שליטה (כתום), בלוקים בסיום (אדום)",
+    "INTERFACE_GUIDE_CHARACTERS_DESCRIPTION": "בחרו בין הדמויות בפרויקט שלכם - או הקישו על סימן הפלוס כדי להוסיף דמות חדשה. כאשר דמות  נבחרת, אתם יכולים לערוך את התסריטים שלה, להקיש על שמה כדי לשנות אותו, או להקיש על מכחול הצבע כדי לערוך את הדמות. למחיקת דמות, לחצו עליה וכשתתנדנד סיגרו באיקס.. 
+
+להעתקת דמות לדף אחר, גרור אותה לתמונה הממוזערת של הדף (משמאל)..",
     "PAINT_GUIDE_UNDO": "{N, number} | Undo",
     "PAINT_GUIDE_REDO": "{N, number} | Redo",
     "PAINT_GUIDE_SHAPE": "{N, number} | Shape",
