--- a/web/public/scratchjr/localizations/He.json
+++ b/web/public/scratchjr/localizations/He.json
@@ -74,19 +74,19 @@
     "BLOCKS_REPEAT_DESCRIPTION": "הפעלת הלבנים בתוך מספר מוגדר של פעמים.",
     "BLOCKS_END_BLOCKS": "לבנת סיום",
     "BLOCKS_END": "סוף",
-    "BLOCKS_END_DESCRIPTION": "Indicates the end of the script (but does not affect the script in any way).",
+    "BLOCKS_END_DESCRIPTION": ".סמן סוף תכנית אך לא משפיע על תסריט עצמו ",
     "BLOCKS_REPEAT_FOREVER": "לעולמים",
     "BLOCKS_REPEAT_FOREVER_DESCRIPTION": "הרצת התסריט לעולמים.",
     "BLOCKS_GO_TO_PAGE": "Go to Page",
-    "BLOCKS_GO_TO_PAGE_DESCRIPTION": "Changes to the specified page of the project.",
+    "BLOCKS_GO_TO_PAGE_DESCRIPTION": ".עבור לדף מוגדר בפרויקט",
     "INTERFACE_GUIDE_NUMBER": "{N, number}",
     "INTERFACE_GUIDE_SAVE": "{N, number} | שמור",
     "INTERFACE_GUIDE_STAGE": "{N, number} | במה",
     "INTERFACE_GUIDE_PRESENTATION_MODE": "{N, number} | מצב מצגת",
-    "INTERFACE_GUIDE_GRID": "{N, number} | Grid",
+    "INTERFACE_GUIDE_GRID": "{N, number} | רשת קואורדינטות",
     "INTERFACE_GUIDE_CHANGE_BG": "{N, number} | שנה רקע",
     "INTERFACE_GUIDE_ADD_TEXT": "{N, number} | הוסף טקסט",
-    "INTERFACE_GUIDE_RESET_CHAR": "{N, number} | Reset Characters",
+    "INTERFACE_GUIDE_RESET_CHAR": "{N, number} | אפס דמות",
     "INTERFACE_GUIDE_GREEN_FLAG": "{N, number} | דגל ירוק",
     "INTERFACE_GUIDE_PAGES": "{N, number} | דפים",
     "INTERFACE_GUIDE_PROJECT_INFO": "{N, number} | מידע על הפרויקט",
@@ -112,23 +112,23 @@
     "INTERFACE_GUIDE_BLOCKS_PALETTE_DESCRIPTION": ".זהו התפריט של הלבנים לתכנות. גררו לבנה לאזור התכנות ואז הקישו עליה, לראות מה היא עושה",
     "INTERFACE_GUIDE_BLOCKS_CATEGORIES_DESCRIPTION": ".כאן תוכלו לבחור קטגוריה של בלוקים לתכנות: הפעלת בלוקים (צהוב), תנועה (כחול), מראה (סגול), צלילים (ירוק), שליטה (כתום), בלוקים בסיום (אדום)",
     "INTERFACE_GUIDE_CHARACTERS_DESCRIPTION": "בחרו בין הדמויות בפרויקט שלכם - או הקישו על סימן הפלוס כדי להוסיף דמות חדשה. כאשר דמות  נבחרת, אתם יכולים לערוך את התסריטים שלה, להקיש על שמה כדי לשנות אותו, או להקיש על מכחול הצבע כדי לערוך את הדמות. למחיקת דמות, לחצו עליה וכשתתנדנד סיגרו באיקס.. להעתקת דמות לדף אחר, גרור אותה לתמונה הממוזערת של הדף (משמאל)..",
-    "PAINT_GUIDE_UNDO": "{N, number} | Undo",
-    "PAINT_GUIDE_REDO": "{N, number} | Redo",
-    "PAINT_GUIDE_SHAPE": "{N, number} | Shape",
-    "PAINT_GUIDE_CHARACTER_NAME": "{N, number} | Character Name",
-    "PAINT_GUIDE_CUT": "{N, number} | Cut",
-    "PAINT_GUIDE_DUPLICATE": "{N, number} | Duplicate",
-    "PAINT_GUIDE_ROTATE": "{N, number} | Rotate",
+    "PAINT_GUIDE_UNDO": "{N, number} | בטל",
+    "PAINT_GUIDE_REDO": "{N, number} | בצע מחדש",
+    "PAINT_GUIDE_SHAPE": "{N, number} | צורה",
+    "PAINT_GUIDE_CHARACTER_NAME": "{N, number} | שם הדמות",
+    "PAINT_GUIDE_CUT": "{N, number} | חתוך",
+    "PAINT_GUIDE_DUPLICATE": "{N, number} | שכפל",
+    "PAINT_GUIDE_ROTATE": "{N, number} | סובב",
     "PAINT_GUIDE_DRAG": "{N, number} | Drag",
-    "PAINT_GUIDE_SAVE": "{N, number} | Save",
-    "PAINT_GUIDE_FILL": "{N, number} | Fill",
-    "PAINT_GUIDE_CAMERA": "{N, number} | Camera",
-    "PAINT_GUIDE_COLOR": "{N, number} | Color",
-    "PAINT_GUIDE_LINE_WIDTH": "{N, number} | Line Width",
+    "PAINT_GUIDE_SAVE": "{N, number} | שמור",
+    "PAINT_GUIDE_FILL": "{N, number} | מלא צבע",
+    "PAINT_GUIDE_CAMERA": "{N, number} | מצלמה",
+    "PAINT_GUIDE_COLOR": "{N, number} | צבע",
+    "PAINT_GUIDE_LINE_WIDTH": "{N, number} | רוחב הקו",
     "PAINT_GUIDE_UNDO_DESCRIPTION": "Reverses the most recent change.",
     "PAINT_GUIDE_REDO_DESCRIPTION": "Reverses the most recent Undo.",
     "PAINT_GUIDE_SHAPE_DESCRIPTION": "Choose a shape to draw: line, circle/ellipse, rectangle, or triangle.",
-    "PAINT_GUIDE_CHARACTER_NAME_DESCRIPTION": "Edit the name of the character.",
+    "PAINT_GUIDE_CHARACTER_NAME_DESCRIPTION": " .ערוך את שם הדמות",
     "PAINT_GUIDE_CUT_DESCRIPTION": "After selecting the Cut tool, you can tap a character or shape to remove it from the canvas.",
     "PAINT_GUIDE_DUPLICATE_DESCRIPTION": "After selecting the Duplicate tool, you can tap a character or shape to create a copy of it.",
     "PAINT_GUIDE_ROTATE_DESCRIPTION": "After selecting the Rotate tool, you can rotate a character or shape around its center.",
